--- a/src/css/index.css
+++ b/src/css/index.css
@@ -36,10 +36,19 @@ a:active {
 /* CLASES */
 
 .piola{
+    border-left: 800px;
+    border-top: 800px;
+    border-right: 800px;
+    border-color:rgb(25, 22, 22) ;
+    border-width: 80px;
+    padding: 90px;
     color: rgb(98, 0, 255);
-    font-weight: 900;
+    font-weight: 90;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
+    width: auto;
+    padding: auto;
+    
 }
 
 #sexo:hover{
