--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,3 +1,7 @@
+*{
+  margin: 0;
+  border: 0;
+}
 
 ul {
     list-style-image:url("png/amongoVerde.png");
@@ -12,12 +16,13 @@ ul {
 } */
 
 body {
-    font-size: 3rem;
+    font-size: 2rem;
     background-color: #914fc388;
     background: linear-gradient(to bottom right, red, blue,rgb(102, 177, 102),rgb(102, 102, 61),purple);
     background-image:url("./png/Amongus.png");
     
     background-position: top center;
+    background-color: rgb(214, 186, 153);
 }
 
 a:hover {
@@ -28,6 +33,11 @@ a:hover {
 
 }
 
+#flex{
+  display: flex;
+  margin: 40px;
+}
+
 a:active {
     font-size: 2rem;
     font-style: italic;
@@ -36,18 +46,20 @@ a:active {
 /* CLASES */
 
 .piola{
-    border-left: 800px;
-    border-top: 800px;
-    border-right: 800px;
-    border-color:rgb(25, 22, 22) ;
+    background-color: rgb(248, 205, 153);
+    margin: auto;
+    /* position: relative; */
+    border-style: groove ;
+    border-color:rgb(214, 170, 88) ;
     border-width: 80px;
     padding: 90px;
-    color: rgb(98, 0, 255);
+    color: rgb(0, 0, 0);
     font-weight: 90;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     width: auto;
     padding: auto;
+    text-shadow: 5px 5px 3px rgba(0, 0, 0, 0.5);
     
 }
 
