--- a/src/views/layout/main.handlebars
+++ b/src/views/layout/main.handlebars
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Webon</title>
+    <title> {{title}}</title>
+    <link rel="stylesheet" href="{{style}}">
 </head>
 <body>
-    <h1>Pajin sali de aca</h1>
-    <a href="../index.html">Huida</a>
+    {{{body}}}
+    
 </body>
 </html>
